--- a/Index.html
+++ b/Index.html
@@ -123,7 +123,7 @@
 <script>
 // --- Configurations ---
 const firebaseConfig = {
-  apiKey: "...", authDomain: "...", projectId: "...",
+  apiKey: "AIzaSyDDvKtm-Mu_12pDLo_9bPvLOusx6YyoYI4", authDomain: "crunchyrollpremiumbd-shop.firebaseapp.com", projectId: "crunchyrollpremiumbd-shop",
 };
 const emailjsConfig = {
   service: "service_z1714kq",
