--- a/Index.html
+++ b/Index.html
@@ -123,8 +123,14 @@
 <script>
 // --- Configurations ---
 const firebaseConfig = {
-  apiKey: "AIzaSyDDvKtm-Mu_12pDLo_9bPvLOusx6YyoYI4", authDomain: "crunchyrollpremiumbd-shop.firebaseapp.com", projectId: "crunchyrollpremiumbd-shop",
-};
+    apiKey: "AIzaSyDDvKtm-Mu_12pDLo_9bPvLOusx6YyoYI4",
+    authDomain: "crunchyrollpremiumbd-shop.firebaseapp.com",
+    projectId: "crunchyrollpremiumbd-shop",
+    storageBucket: "crunchyrollpremiumbd-shop.appspot.com",
+    messagingSenderId: "790961397898",
+    appId: "1:790961397898:web:1c5fceb8b5d3340c3bcd73",
+    measurementId: "G-PSSPTLC6MJ"
+  };
 const emailjsConfig = {
   service: "service_z1714kq",
   adminTpl: "template_hp66tqp",
