--- a/Index.html
+++ b/Index.html
@@ -34,7 +34,7 @@
 <div id="signupPage" class="page active">
   <h2>🔐 সাইন আপ</h2>
   <input id="suEmail" type="email" placeholder="📧 ইমেইল">
-  <input id="suPhone" type="text" placeholder="📱 মোবাইল নম্বর">
+  <input id="suPhone" type="text" placeholder="🎀 মোবাইল নম্বর">
   <input id="suPass" type="password" placeholder="🔑 পাসওয়ার্ড (৬ সংখ্যার)">
   <input id="suConfirm" type="password" placeholder="🔑 কনফার্ম পাসওয়ার্ড">
   <input id="suCity" type="text" placeholder="🏙️ শহর">
