--- a/upload.html
+++ b/upload.html
@@ -1,64 +1,68 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Upload Screenshot - Crunchyroll Premium BD</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Upload Screenshot</title>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
-      background: #f9f9f9;
-      margin: 0;
-      padding: 0;
+      background: #fffdf5;
+      padding: 40px;
+      text-align: center;
     }
-    .container {
-      max-width: 500px;
-      margin: 40px auto;
+    .box {
       background: #fff;
+      max-width: 450px;
+      margin: auto;
       padding: 30px;
       border-radius: 12px;
-      box-shadow: 0 0 20px rgba(0,0,0,0.08);
+      box-shadow: 0 4px 20px rgba(0,0,0,0.1);
     }
-    h2 {
-      text-align: center;
-      color: #ff6600;
-      margin-bottom: 25px;
-    }
-    input, button {
+    input[type="email"], input[type="file"], button {
       width: 100%;
       padding: 12px;
-      margin: 10px 0;
+      margin-top: 10px;
+      border-radius: 6px;
       border: 1px solid #ddd;
-      border-radius: 8px;
-      font-size: 16px;
+      font-size: 15px;
     }
     button {
-      background: #00c853;
+      background: #ff6600;
       color: white;
-      font-weight: bold;
-      cursor: pointer;
       border: none;
+      cursor: pointer;
+      font-weight: bold;
     }
     button:hover {
-      background: #00b347;
+      background: #e65c00;
     }
-    .success {
-      color: green;
-      text-align: center;
+    .msg {
       margin-top: 15px;
+      color: green;
       font-weight: bold;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h2>📤 Upload Your Screenshot</h2>
+
+  <div class="box">
+    <h2>📤 Send Your Account Screenshot</h2>
     <form id="uploadForm">
-      <input type="email" id="email" placeholder="Your Email" required>
-      <input type="file" id="file" accept="image/*" required>
-      <button type="submit">Submit Screenshot</button>
+      <input type="email" id="email" placeholder="Your Email" required />
+      <input type="file" id="screenshot" accept="image/*" required />
+      <button type="submit">Upload Screenshot</button>
     </form>
-    <div class="success" id="successMsg"></div>
-  </div>  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>  <script>
+    <div class="msg" id="msgBox"></div>
+  </div>
+
+  <!-- Firebase SDK -->
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+
+  <script>
+    // ✅ Firebase config from your project
     const firebaseConfig = {
       apiKey: "AIzaSyDDvKtm-Mu_12pDLo_9bPvLOusx6YyoYI4",
       authDomain: "crunchyrollpremiumbd-shop.firebaseapp.com",
@@ -68,37 +72,49 @@
       appId: "1:790961397898:web:1c5fceb8b5d3340c3bcd73",
       measurementId: "G-PSSPTLC6MJ"
     };
+
     firebase.initializeApp(firebaseConfig);
     const storage = firebase.storage();
     const db = firebase.firestore();
 
-    document.getElementById("uploadForm").addEventListener("submit", async function(e) {
+    document.getElementById('uploadForm').addEventListener('submit', async function (e) {
       e.preventDefault();
-      const email = document.getElementById("email").value;
-      const file = document.getElementById("file").files[0];
-      const timestamp = new Date();
-      const filePath = `screenshots/${Date.now()}_${file.name}`;
 
-      const uploadTask = storage.ref(filePath).put(file);
-      uploadTask.on("state_changed",
+      const email = document.getElementById('email').value;
+      const file = document.getElementById('screenshot').files[0];
+      const msg = document.getElementById('msgBox');
+
+      if (!email || !file) {
+        msg.innerText = "❌ Email এবং Screenshot দিন!";
+        return;
+      }
+
+      const fileName = `screenshots/${Date.now()}_${file.name}`;
+      const uploadTask = storage.ref(fileName).put(file);
+
+      uploadTask.on('state_changed',
         null,
-        (error) => alert("❌ Upload Failed: " + error.message),
+        (error) => {
+          msg.innerText = "❌ Upload Failed: " + error;
+        },
         async () => {
           const url = await uploadTask.snapshot.ref.getDownloadURL();
           await db.collection("screenshots").add({
-            email,
-            url,
-            time: timestamp
+            email: email,
+            url: url,
+            time: firebase.firestore.FieldValue.serverTimestamp()
           });
-          document.getElementById("successMsg").textContent = "✅ Screenshot submitted successfully!";
-          document.getElementById("uploadForm").reset();
+          msg.innerText = "✅ Screenshot uploaded successfully!";
+          document.getElementById('uploadForm').reset();
         }
       );
     });
 
-    // Autofill email from query param
+    // Optional: Auto fill email from URL ?email=
     const params = new URLSearchParams(window.location.search);
-    const userEmail = params.get("email");
-    if(userEmail) document.getElementById("email").value = userEmail;
-  </script></body>
+    if (params.has("email")) {
+      document.getElementById("email").value = params.get("email");
+    }
+  </script>
+</body>
 </html>
