--- a/upload.html
+++ b/upload.html
@@ -1,120 +1,34 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Upload Screenshot</title>
-  <style>
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      background: #fffdf5;
-      padding: 40px;
-      text-align: center;
+<script>
+  const cloudName = "dqtts30hb"; // তোমার Cloud name
+  const folderName = "screenshots";
+
+  async function loadCloudinaryScreenshots() {
+    const url = `https://res.cloudinary.com/${cloudName}/image/list/${folderName}.json`;
+
+    try {
+      const res = await fetch(url);
+      const data = await res.json();
+      const container = document.getElementById("screenshotList");
+      container.innerHTML = "";
+
+      data.resources.reverse().forEach(item => {
+        const img = document.createElement("img");
+        img.src = `https://res.cloudinary.com/${cloudName}/image/upload/${item.public_id}.jpg`;
+        img.style.maxWidth = "100%";
+        img.style.borderRadius = "8px";
+        img.style.marginBottom = "15px";
+
+        const card = document.createElement("div");
+        card.className = "card";
+        card.innerHTML = `<p><strong>Image:</strong> ${item.public_id}</p>`;
+        card.appendChild(img);
+
+        container.appendChild(card);
+      });
+    } catch (error) {
+      console.error("Cloudinary screenshot fetch failed:", error);
     }
-    .box {
-      background: #fff;
-      max-width: 450px;
-      margin: auto;
-      padding: 30px;
-      border-radius: 12px;
-      box-shadow: 0 4px 20px rgba(0,0,0,0.1);
-    }
-    input[type="email"], input[type="file"], button {
-      width: 100%;
-      padding: 12px;
-      margin-top: 10px;
-      border-radius: 6px;
-      border: 1px solid #ddd;
-      font-size: 15px;
-    }
-    button {
-      background: #ff6600;
-      color: white;
-      border: none;
-      cursor: pointer;
-      font-weight: bold;
-    }
-    button:hover {
-      background: #e65c00;
-    }
-    .msg {
-      margin-top: 15px;
-      color: green;
-      font-weight: bold;
-    }
-  </style>
-</head>
-<body>
+  }
 
-  <div class="box">
-    <h2>📤 Send Your Account Screenshot</h2>
-    <form id="uploadForm">
-      <input type="email" id="email" placeholder="Your Email" required />
-      <input type="file" id="screenshot" accept="image/*" required />
-      <button type="submit">Upload Screenshot</button>
-    </form>
-    <div class="msg" id="msgBox"></div>
-  </div>
-
-  <!-- Firebase SDK -->
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
-
-  <script>
-    // ✅ Firebase config from your project
-    const firebaseConfig = {
-      apiKey: "AIzaSyDDvKtm-Mu_12pDLo_9bPvLOusx6YyoYI4",
-      authDomain: "crunchyrollpremiumbd-shop.firebaseapp.com",
-      projectId: "crunchyrollpremiumbd-shop",
-      storageBucket: "crunchyrollpremiumbd-shop.appspot.com",
-      messagingSenderId: "790961397898",
-      appId: "1:790961397898:web:1c5fceb8b5d3340c3bcd73",
-      measurementId: "G-PSSPTLC6MJ"
-    };
-
-    firebase.initializeApp(firebaseConfig);
-    const storage = firebase.storage();
-    const db = firebase.firestore();
-
-    document.getElementById('uploadForm').addEventListener('submit', async function (e) {
-      e.preventDefault();
-
-      const email = document.getElementById('email').value;
-      const file = document.getElementById('screenshot').files[0];
-      const msg = document.getElementById('msgBox');
-
-      if (!email || !file) {
-        msg.innerText = "❌ Email এবং Screenshot দিন!";
-        return;
-      }
-
-      const fileName = `screenshots/${Date.now()}_${file.name}`;
-      const uploadTask = storage.ref(fileName).put(file);
-
-      uploadTask.on('state_changed',
-        null,
-        (error) => {
-          msg.innerText = "❌ Upload Failed: " + error;
-        },
-        async () => {
-          const url = await uploadTask.snapshot.ref.getDownloadURL();
-          await db.collection("screenshots").add({
-            email: email,
-            url: url,
-            time: firebase.firestore.FieldValue.serverTimestamp()
-          });
-          msg.innerText = "✅ Screenshot uploaded successfully!";
-          document.getElementById('uploadForm').reset();
-        }
-      );
-    });
-
-    // Optional: Auto fill email from URL ?email=
-    const params = new URLSearchParams(window.location.search);
-    if (params.has("email")) {
-      document.getElementById("email").value = params.get("email");
-    }
-  </script>
-</body>
-</html>
+  window.onload = loadCloudinaryScreenshots;
+</script>
